--- a/index.html
+++ b/index.html
@@ -373,7 +373,12 @@ summary {
 
 <div id="section" class="section level2">
 <h2>2020-10-18</h2>
+<div id="finished-data-conversion-to-.mzml" class="section level3">
+<h3>23:27 Finished data conversion to .mzML</h3>
+<p>Just used msconvert to convert the .raw data to .mzML. The only filter used is pickPeaking msLevel=1-2. The end file size are much smaller than expected even though I’ve been told they are expected to be larger than the .raw files. Am I doing something wrong?</p>
+<p>I will try pyopenms to open these .mzML files.</p>
 <p>Setting up a Rmarkdown log for this project.</p>
+</div>
 </div>
 
 
