--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <meta name="author" content="ptruong" />
 
-<meta name="date" content="2020-10-18" />
+<meta name="date" content="2020-10-21" />
 
 <title>isoMS</title>
 
@@ -366,11 +366,21 @@ summary {
 
 <h1 class="title toc-ignore">isoMS</h1>
 <h4 class="author">ptruong</h4>
-<h4 class="date">October 18, 2020</h4>
+<h4 class="date">October 21, 2020</h4>
 
 </div>
 
 
+<div id="webnesday" class="section level2">
+<h2>2020-10-21 Webnesday</h2>
+<div id="more-tools-pyopenms-and-previous-run-of-conversion-to-.mzml-was-bad" class="section level3">
+<h3>14:27 More tools, pyopenms and previous run of conversion to .mzML was bad</h3>
+<p>Previous run conversion run with msconvert was bad. Just reran the code without peakPicking filter.</p>
+<p>Checked out pyopenms. It works on my desktop, but there is an error related to QT5 on my laptop when running on spyder (why?).</p>
+<p>I got the suggestion to use dinosaur as a peakPicker and try different peakPicking filters from it.</p>
+<p>ToDo: - check if Percolator applicable at some step here? - check how to run dinosaur. - peakPick with dinosaur. - Script code to generate some exploratory plots with .mzML files. - Check if pandas-profiling can be useful.</p>
+</div>
+</div>
 <div id="section" class="section level2">
 <h2>2020-10-18</h2>
 <div id="finished-data-conversion-to-.mzml" class="section level3">
